# RAGamPDF

./: .env  .env-example  README.md  app.ipynb  config.yaml  pyproject.toml
data/processed/index/: index.faiss  index.pkl
data_vector/: index.faiss  index.pkl
frontend/: app.py
src/rag_llm/: core.py
src/rag_llm/data/: loader.py  splitter.py
src/rag_llm/models/: generator.py  retriever.py
src/rag_llm/utils/: config.py
tests/: conftest.py  test_generator.py  test_loader.py  test_retriever.py  test_splitter.py
