[project]
name = "ragampdf"
version = "0.1.0"
description = ""
authors = [
    {name = "Wahyu Azizi",email = "wahyuazizi03@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
ipykernel = "^6.29.5"

