[project]
name = "ragampdf"
version = "0.1.0"
description = ""
authors = [
    {name = "Wahyu Azizi",email = "wahyuazizi03@gmail.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "langchain-community (>=0.3.21,<0.4.0)",
    "faiss-cpu (>=1.10.0,<2.0.0)",
    "langchain-huggingface (>=0.1.2,<0.2.0)",
    "pymupdf (>=1.25.5,<2.0.0)",
    "tiktoken (>=0.9.0,<0.10.0)",
    "langchain-ollama (>=0.3.0,<0.4.0)",
    "python-dotenv (>=1.1.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
ipykernel = "^6.29.5"

